[package]
name = "hacker-os"
version = "0.1.0"
authors = ["wwestlake"]
edition = "2018"

[package.metadata.bootimage]
default-target = "x86_64-hacker-os.json"

[dependencies]
bootloader = "0.3.12"
volatile = "0.2.3"
spin = "0.4.9"
uart_16550 = "0.1.0"
x86_64 = "0.3.5"
pic8259_simple = "0.1.1"
pc-keyboard = "0.3.1"

[dev-dependencies]
array-init = "0.0.3"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]


